[package]
name = "amethyst_sample_project"
version = "0.1.0"
authors = ["neoks23 <57813986+neoks23@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.amethyst]
version = "0.15"
features = ["vulkan"]